--- a/css/main.css
+++ b/css/main.css
@@ -56,60 +56,15 @@ div > h6{
 
 /* Direction Example */
 
-.column {
-    display:flex;
-    flex-direction: column;
-    text-align:center;
-}
-
-/* Justify Examples */
-
-.start {
-    display:flex;
-    justify-content:start;
-}
-
-.end {
-    display:flex;
-    justify-content:end;
-}
-
-.around {
-    display:flex;
-    justify-content:space-around;
-}
-
-.between {
-    display:flex;
-    justify-content:space-between;
-}
-
 /* Flex Item Examples */
-
-.grow {
-    display:flex;
-}
-
-.self {
-    display:flex;
-}
-
-.self2 {
-    display:flex;
-    align-self:center;
-    overflow:auto;
-}
-
-.order {
-    display:flex;
-}
 
 /* Test W3 Things */
 
 .flex-container {
     display:flex;
     background-color:#262935;
-    width:500px;
+    width:700px;
+    border:1px solid white;
 }
 
 .flex-containerhead {
@@ -118,11 +73,58 @@ div > h6{
     width:1000px;
 }
 
+.flex-containerend {
+    display:flex;
+    background-color:#262935;
+    width:1000px;
+    border:1px solid white;
+    justify-content:flex-end;
+}
+
+.flex-containerar {
+    display:flex;
+    background-color:#262935;
+    width:700px;
+    border:1px solid white;
+    justify-content: space-around;
+}
+
+.flex-containerbt {
+    display:flex;
+    background-color:#262935;
+    width:700px;
+    border:1px solid white;
+    justify-content:space-between;
+}
+
 .flex-containercol {
     display:flex;
     flex-direction:column;
     background-color: #262935;
-    width:500px;
+    width:700px;
+    border:1px solid white;
+}
+
+.flex-containerself {
+    display:flex;
+    background-color:#262935;
+    width:700px;
+    border:1px solid white;
+}
+
+.flex-containerorder {
+    display:flex;
+    background-color:#262935;
+    width:700px;
+    border:1px solid white;
+}
+
+.flex-containerwrr {
+    display:flex;
+    background-color:#262935;
+    width:700px;
+    border:1px solid #161925;
+    flex-wrap:reverse;
 }
 
 .flex-containercol > div {
@@ -132,13 +134,19 @@ div > h6{
     text-align:center;
     padding:20px;
     font-size:30px;
+    border:1px solid #161925;
+}
+
+.flex-containerar > div > h2 {
+    font-size:25px;
 }
 
 .flex-containerstart {
     display:flex;
     background-color:#262935;
     justify-content:flex-start;
-    width:700px;
+    width:1000px;
+    border:1px solid white;
 }
 
 .flex-containerstart > div {
@@ -148,6 +156,7 @@ div > h6{
     text-align:center;
     padding:20px;
     font-size:30px;
+    border:1px solid #161925;
 }
 
 .flex-container > div {
@@ -155,6 +164,79 @@ div > h6{
     margin:10px;
     padding:20px;
     font-size:30px;
+    border:1px solid #161925;
+}
+
+.flex-containerend > div {
+    background-color:#363955;
+    margin:10px;
+    padding:20px;
+    font-size:30px;
+    text-align:center;
+    width:100px;
+    border:1px solid #161925;
+}
+
+.flex-containerar > div {
+    background-color:#363955;
+    width:100px;
+    margin:10px;
+    padding:20px;
+    font-size:25px;
+    text-align:center;
+    border:1px solid #161925;
+}
+
+.flex-containerbt > div {
+    background-color:#363955;
+    width:100px;
+    margin:10px;
+    padding:20px;
+    font-size:30px;
+    text-align:center;
+    border:1px solid #161925;
+}
+
+.flex-containerbt > div > h2 {
+    font-size:25px;
+}
+
+.flex-containerself > div {
+    background-color:#363955;
+    width:100px;
+    margin:10px;
+    padding:20px;
+    font-size:30px;
+    text-align:center;
+    border:1px solid #161925;
+}
+
+.flex-containerself > div > h2 {
+    font-size:25px;
+}
+
+.flex-containerorder > div {
+    background-color:#363955;
+    width:100px;
+    margin:10px;
+    padding:20px;
+    font-size:30px;
+    text-align:center;
+    border:1px solid #161925;
+}
+
+.flex-containerorder > div > h2 {
+    font-size:25px;
+}
+
+.flex-containerwrr > div {
+    background-color:#363955;
+    width:100px;
+    margin:10px;
+    padding:20px;
+    font-size:107x;
+    text-align:center;
+    border:1px solid #161925;
 }
 
 .flex-containerhead > div {
@@ -163,6 +245,9 @@ div > h6{
     padding:20px;
     font-size:30px;
     overflow:visible;
+    border:1px solid #161925;
 }
+
+
 
 /* W3 Works So I'm Going To Use It */
